components/platform/kafka-connect/overlays/dev/netpol-kafka-connect.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zylos-kafka-connect-netpol
  namespace: zylos-infra-kafka
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: zylos-kafka-connect
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # ALLOW REST API INGRESS
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: zylos-services
      ports:
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 15008

  egress:
    # ALLOW INTRA-NAMESPACE ECOSYSTEM (Brokers & Schema Registry)
    - to:
        - podSelector:
            matchLabels:
              strimzi.io/cluster: zylos-kafka
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: schema-registry
      ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 15008

    # ALLOW EGRESS TO DATABASES (The Connectors)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: zylos-data-mongodb

      ports:
        - protocol: TCP
          port: 27017 # MongoDB
        - protocol: TCP
          port: 15008
